# client-cli

./: .mypy.ini  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pantos-client.sh  pyproject.toml  sonar-project.properties
.github/ISSUE_TEMPLATE/: ISSUE_REPORT.yml
.github/workflows/: build.yaml  ci.yaml  docker-vulnerabilities.yaml  main.yaml  publish-docker.yaml  release.yaml  sonar.yaml
tests/: conftest.py  test__main__.py
vision/: client-library.yml
vision/cli/: __init__.py  __main__.py  application.py  configuration.py  exceptions.py
