[tool.poetry]
name = "vision-client-cli"
version = "0.1.0"
description = "Client CLI for engaging with the Vision system"
authors = ["XXXX"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "vision"}
]
include = [
    "vision/client-library.yml",
    "vision/client-library.env",
    "vision/client-cli.yml",
    "vision/client-cli.env",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vision"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"

[tool.poetry.group.lint.dependencies]
bandit = "1.7.10"
flake8 = "7.1.1"
isort = "5.13.2"
mypy = "1.0.1"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20241016"
yapf = "0.40.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"

[tool.poetry.dependencies]
python = "^3.13"
vision-common = "0.1.0"
vision-client-library = "0.1.0"
Cerberus = "1.3.4"
PyYAML = "6.0.1"
requests = "2.32.3"
web3 = "6.5.0"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vision-cli = "vision.cli.__main__:main"
